src/gcl.py
"""Implementacion de un analizador sintactico para el lenguaje GCL

Copyright (C) 2022 - Nestor Gonzalez - José Pérez
CI3725 - Traductores e Interpretadores
"""

from tokens import tokens
import ply.yacc as yacc
from Utils.utils import *
from Utils.AST import *
import codecs
import sys

# Diccionario para traducir operadores a su formato correcto de impresion
trad_op = {
    '+' : 'Plus',
    '*' : 'Mult',
    '-' : 'Minus',
    '\\/' : 'Or',
    '/\\' : 'And',
    '<=' : 'Leq',
    '<' : 'Less',
    '>=' : 'Geq',
    '>' : 'Greater',
    '==' : 'Equal',
    '!=' : 'NotEqual',
    '!' : 'Not',
    'in' : 'In'
}

# Definicion de las reglas de precedencia
precedence = (
    ('left', 'TkOr'),
    ('left', 'TkAnd'),
    ('right', 'TkNot'),
    ('nonassoc', 'TkEqual', 'TkNEqual'),
    ('nonassoc','TkLess', 'TkLeq', 'TkGeq', 'TkGreater'),
    ('left', 'TkPlus', 'TkMinus'),
    ('left', 'TkMult'),
    ('nonassoc', 'UNARY')
)

# ------ DETECCION DE ERRORES ---------
def p_error(p):
    print(f"Sintax error in row {p.lineno}, column" ,
    f"{find_column(data, p)} unexpected token '{str(p.value)}'")
    sys.exit(0)


# ------ ESTRUCTURA DEL PROGRAMA PRINCIPAL ---------
# Simbolo inicial de la gramatica: BLOCK
def p_program(p):
    '''
    BLOCK : TkOBlock DECLARE LIST_INSTRUCTIONS TkCBlock
    '''
    p[0] = Nodo("Block", p[2], p[3])

# ------ SUBPROGRAMA ---------
def p_subprogram(p):
    '''
    SUBPROGRAM : BLOCK
               | LIST_INSTRUCTIONS
    '''
    p[0] = p[1]

# ------ BLOQUE DECLARE ---------
def p_declare(p):
    '''
    DECLARE : TkDeclare LIST_DECLARE
            | 
    '''
    if len(p) == 1:
        p[0] = None
    else:
        p[0] = Nodo("Declare", p[2])

# -- Lista de declaracones de variables 
# Condicion para parar la recursion
def p_list_declare_base(p):
    '''
    LIST_DECLARE : VARIABLE_DECLARATION
    '''
    p[0] = p[1]

# -- Lista de declaracones de variables 
def p_list_declare(p):
    '''
    LIST_DECLARE : LIST_DECLARE TkSemicolon VARIABLE_DECLARATION
    '''
    p[0] = Nodo('Sequencing', p[1], p[3])

                
# -- Lista de variables declaradas en una linea 
# Condicion para parar la recursion
def p_list_variables_declare_base(p):
    '''
    VARIABLE_DECLARATION : TkId TkTwoPoints TYPE
    '''
    p[0] = Nodo(f"{p[1]} {p[2]} {p[3]}")

# -- Lista de variables declaradas en una linea 
def p_list_variables_declare(p):
    '''
    VARIABLE_DECLARATION : TkId TkComma VARIABLE_DECLARATION
    '''
    p[0] = Nodo(f"{p[1]}{p[2]} " + f"{p[3]}")

# -- Tipo de datos para las variables declaradas 
def p_type_varible_declare(p):
    '''
    TYPE : TkInt 
         | TkBool 
         | ARRAY_DECLARATION
    '''
    p[0] = p[1]
    
# -- Declaracion de arreglos 
def p_array_declaration(p):
    '''
    ARRAY_DECLARATION : TkArray TkOBracket NUM TkSoForth NUM TkCBracket
    '''
    p[0] = f"array[Literal: {p[3]}..Literal: {p[5]}]"

# -- Num puede ser negativo 
def p_num_integer(p):
    '''
    NUM : TkNum
        | TkMinus TkNum
    '''
    if len(p) == 3:
        p[0] = -p[2]
    else:
        p[0] = p[1]

#----- BLOQUE DE INSTRUCCIONES -----
def p_intruccions_list_base(p):
    '''
    LIST_INSTRUCTIONS : INSTRUCTION
    '''
    p[0] = p[1]

#----- Secuencia de instrucciones
def p_intruccions_list(p):
    '''
    LIST_INSTRUCTIONS : LIST_INSTRUCTIONS TkSemicolon INSTRUCTION
    '''
    p[0] = Nodo('Sequencing', p[1], p[3])

#----- Tipos de instrucciones
def p_instruccion(p):
    '''
    INSTRUCTION : ASIG
                | PRINT
                | FOR_LOOP
                | DO_LOOP
                | CONDITIONAL
                | TkSkip
    '''
    if p[1] != 'skip':
        p[0] =  p[1]
    else:
        p[0] = Nodo('skip')

#----- INSTRUCCION ASIGNACION -----
def p_asig(p):
    '''
    ASIG : TkId TkAsig EXPRESSION
    '''
    p[0] = Nodo('Asig', Nodo(f"Ident: {p[1]}"), p[3])

#-- Puede ser una expresion o la creacion de un arreglo
def p_asig_expresion(p):
    '''
    EXPRESSION : E
               | ASIG_ARRAY
    '''
    p[0] = p[1]

#-- Se puede crear un arreglo de forma manual o extendida
def p_asig_array(p):
    '''
    ASIG_ARRAY : CREATE_ARRAY
               | WRITE_ARRAY
    '''
    p[0] = p[1]

#-- Creacion de arreglos de forma manual
# E, E, E, E, E, E, E, ...
def p_create_array(p):
    '''
    CREATE_ARRAY : E TkComma E
    '''
    p[0] = Nodo('Comma', p[1], p[3])


#-- Creacion de arreglos de forma manual
# condicion de parada de la recursion
def p_create_array_base(p):
    '''
    CREATE_ARRAY : CREATE_ARRAY TkComma E
    '''
    p[0] = Nodo('Comma', p[1], p[3])

#-- Creacion de arreglos de forma extendia
# condicion de parada de la recursion
def p_write_array_base(p):
    '''
    WRITE_ARRAY : TkId TkOpenPar E TkTwoPoints E TkClosePar
    '''
    p[0] = Nodo('WriteArray',Nodo(f"Ident: {p[1]}") , Nodo('TwoPoints', p[3], p[5]))
    # p[0] = Nodo("Holas")

#-- Creacion de arreglos de forma extendia
def p_write_array(p):
    '''
    WRITE_ARRAY : WRITE_ARRAY TkOpenPar E TkTwoPoints E TkClosePar
    '''
    p[0] = Nodo('WriteArray', p[1], Nodo("TwoPoints", p[3], p[5]))
    # p[0] = Nodo("hola")

#-- Identificar expresiones aritmeticas y booleanas
def p_expression_op_binary(p):
    '''
    E : E TkMult E
      | E TkPlus E
      | E TkMinus E
      | E TkOr E
      | E TkAnd E
      | E TkLess E
      | E TkLeq E
      | E TkGeq E
      | E TkGreater E
      | E TkEqual E
      | E TkNEqual E
    '''
    p[0] = Nodo(trad_op.get(p[2]), p[1], p[3])

#-- Expresoion entre parentesis
def p_expression_par(p):
    '''
    E : TkOpenPar E TkClosePar
    '''
    p[0] = p[2]

#-- Operador unario aplicdo a una expresion
def p_expression_op_unary(p):
    '''
    E : TkNot E
      | TkMinus E %prec UNARY
    '''
    p[0] = Nodo(trad_op.get(p[1]), p[2])

#-- Tipos de expresiones TERMINALES
# acceso al indice de un arreglo
def p_expression_base(p):
    '''
    E : TkNum
      | TkId
      | TkTrue
      | TkFalse
      | READ_ARRAY
    '''
    if isinstance(p[1], int) or p[1] == 'true' or p[1] == 'false':
        p[0] = Nodo(f"Literal: {p[1]}")
    
    elif isinstance(p[1], Nodo):
        p[0] = p[1]
    else:
        p[0] = Nodo(f"Ident: {p[1]}")
        
#-------- DETECCION DE PRINT'S ------
def p_print(p):
    '''
    PRINT : TkPrint TOPRINT  
    '''
    p[0] = Nodo("Print" ,p[2])

#-- EXpresion a imprimir con multiples concatenaciones
# COndicion de parada para la recursividad
def p_to_print_base(p):
    '''
    TOPRINT : EXPRESSION_TO_PRINT   
    '''
    p[0] = p[1]
    
#-- EXpresion a imprimir con multiples concatenaciones
def p_to_print(p):
    '''
    TOPRINT : TOPRINT TkConcat EXPRESSION_TO_PRINT   
    '''
    p[0] = Nodo('Concat', p[1], p[3])

#-- EXpresiones que son posibles de concatenar e imprimir
def p_expression_print(p):
    '''
    EXPRESSION_TO_PRINT : TkId
               | STRING
               | TkNum
               | TkTrue
               | TkFalse
               | READ_ARRAY
    '''
    if isinstance(p[1], Nodo):
        p[0] = p[1]

    elif isinstance(p[1], int) or p[1] == 'true' or p[1] == 'false':
        p[0] = Nodo(f"Literal: {p[1]}")

    else:
        p[0] = Nodo(f"Ident: {p[1]}")

#-- Produccio auxiliar de ayuda para la contruccion del AST
def p_string(p):
    '''
    STRING : TkString
    '''
    p[0] = Nodo(f"String: {p[1]}")

#-- Acceso a un array index
def p_array_index(p):
    '''
    READ_ARRAY : ARRAY TkOBracket E TkCBracket
    '''
    p[0] = Nodo("ReadArray", p[1], p[3])

#-- Acceso a un array index con
# TkId con el nombre del array |
# arreglo escrito de forma estendida
def p_array_index_id_or_read(p):
    '''
    ARRAY : TkId
          | WRITE_ARRAY
    '''
    if isinstance(p[1], Nodo):
        p[0] = p[1]
    else:
        p[0] = Nodo(f"Ident: {p[1]}")

#-------- DETECCION DE CICLOS FOR ------
def p_for_loop(p):
    '''
    FOR_LOOP : TkFor TkId TkIn E TkTo E TkArrow SUBPROGRAM TkRof
    '''
    p[0] = Nodo('For', Nodo('In', Nodo(f"Ident: {p[2]}"), Nodo('To', p[4], p[6])), p[8])

#-------- DETECCION DE CICLOS DO ------
# Es posible que tenga multiples guardias
def p_do_loop(p):
    '''
    DO_LOOP : TkDo GUARD TkOd
    '''
    p[0] = Nodo('Do', p[2])

#-------- DETECCION DE SENTENCIAS IF / GUARD------
# Es posible que tenga multiples guardias
def p_if_conditional(p):
    '''
    CONDITIONAL : TkIf GUARD TkFi
    '''
    p[0] = Nodo('If', p[2])

#-- Multiples guardias
# Condicion de parada de la recursividad
def p_guard_base(p):
    '''
    GUARD : E TkArrow SUBPROGRAM
    '''
    p[0] = Nodo('Then', p[1], p[3])

#-- Multiples guardias
def p_guard(p):
    '''
    GUARD : GUARD TkGuard E TkArrow SUBPROGRAM
    '''
    p[0] = Nodo("Guard", p[1], Nodo('Then', p[3], p[5]))

#---- REPL ----#

# Tomar el archivo 
archivo = sys.argv[1]

# Intentar leer el archivo con el formato correcto
try:

    # abrir archivo
    handleFile = codecs.open(archivo)

    # comprobar extension file
    if not archivo.endswith(".gcl"):
        raise Exception("Error, la extension del archivo debe ser .gcl")
        
    data = handleFile.read()

    # Impresion del AST
    parser = yacc.yacc()
    ast = parser.parse(data)
    print_arbol(ast)

except FileNotFoundError as e:
    print("Error, archivo [" + archivo + "] no encontrado")
    # sys.exit(0)
except Exception as e:
    print(e)
    # sys.exit(0)
finally:
    handleFile.close()
