src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> BLOCK
Rule 1     BLOCK -> TkOBlock DECLARE LIST_INSTRUCTIONS TkCBlock
Rule 2     DECLARE -> TkDeclare LIST_DECLARE
Rule 3     DECLARE -> <empty>
Rule 4     LIST_DECLARE -> VARIABLE_DECLARATION
Rule 5     LIST_DECLARE -> LIST_DECLARE TkSemicolon VARIABLE_DECLARATION
Rule 6     VARIABLE_DECLARATION -> TkId TkTwoPoints TYPE
Rule 7     VARIABLE_DECLARATION -> TkId TkComma VARIABLE_DECLARATION
Rule 8     TYPE -> TkInt
Rule 9     TYPE -> TkBool
Rule 10    TYPE -> ARRAY_DECLARATION
Rule 11    ARRAY_DECLARATION -> TkArray TkOBracket TkNum TkSoForth TkNum TkCBracket
Rule 12    LIST_INSTRUCTIONS -> INSTRUCTION
Rule 13    LIST_INSTRUCTIONS -> LIST_INSTRUCTIONS TkSemicolon INSTRUCTION
Rule 14    INSTRUCTION -> ASIG
Rule 15    INSTRUCTION -> PRINT
Rule 16    INSTRUCTION -> DO_LOOP
Rule 17    INSTRUCTION -> FOR_LOOP
Rule 18    INSTRUCTION -> CONDITIONAL
Rule 19    INSTRUCTION -> TkSkip
Rule 20    ASIG -> TkId TkAsig EXPRESSION
Rule 21    EXPRESSION -> E
Rule 22    EXPRESSION -> ASIG_ARRAY
Rule 23    ASIG_ARRAY -> CREATE_ARRAY
Rule 24    ASIG_ARRAY -> WRITE_ARRAY
Rule 25    CREATE_ARRAY -> E TkComma E
Rule 26    CREATE_ARRAY -> CREATE_ARRAY TkComma E
Rule 27    WRITE_ARRAY -> TkId TkOpenPar E TkTwoPoints E TkClosePar
Rule 28    WRITE_ARRAY -> WRITE_ARRAY TkOpenPar E TkTwoPoints E TkClosePar
Rule 29    E -> E TkMult E
Rule 30    E -> E TkPlus E
Rule 31    E -> E TkMinus E
Rule 32    E -> E TkOr E
Rule 33    E -> E TkAnd E
Rule 34    E -> E TkLess E
Rule 35    E -> E TkLeq E
Rule 36    E -> E TkGeq E
Rule 37    E -> E TkGreater E
Rule 38    E -> E TkEqual E
Rule 39    E -> E TkNEqual E
Rule 40    E -> TkOpenPar E TkClosePar
Rule 41    E -> TkNot E
Rule 42    E -> TkMinus E
Rule 43    E -> TkNum
Rule 44    E -> TkId
Rule 45    E -> TkTrue
Rule 46    E -> TkFalse
Rule 47    E -> READ_ARRAY
Rule 48    PRINT -> TkPrint TOPRINT
Rule 49    TOPRINT -> EXPRESSION_TO_PRINT
Rule 50    TOPRINT -> TOPRINT TkConcat EXPRESSION_TO_PRINT
Rule 51    EXPRESSION_TO_PRINT -> TkId
Rule 52    EXPRESSION_TO_PRINT -> TkString
Rule 53    EXPRESSION_TO_PRINT -> TkNum
Rule 54    EXPRESSION_TO_PRINT -> TkTrue
Rule 55    EXPRESSION_TO_PRINT -> TkFalse
Rule 56    EXPRESSION_TO_PRINT -> READ_ARRAY
Rule 57    READ_ARRAY -> TkId TkOBracket E TkCBracket
Rule 58    DO_LOOP -> TkDo E TkArrow LIST_INSTRUCTIONS TkOd
Rule 59    FOR_LOOP -> TkFor TkId TkIn E TkTo E TkArrow LIST_INSTRUCTIONS TkRof
Rule 60    CONDITIONAL -> TkIf GUARD TkFi
Rule 61    GUARD -> E TkArrow LIST_INSTRUCTIONS
Rule 62    GUARD -> GUARD TkGuard E TkArrow LIST_INSTRUCTIONS

Terminals, with rules where they appear

TkAnd                : 33
TkArray              : 11
TkArrow              : 58 59 61 62
TkAsig               : 20
TkBool               : 9
TkCBlock             : 1
TkCBracket           : 11 57
TkClosePar           : 27 28 40
TkComma              : 7 25 26
TkConcat             : 50
TkDeclare            : 2
TkDo                 : 58
TkEqual              : 38
TkFalse              : 46 55
TkFi                 : 60
TkFor                : 59
TkGeq                : 36
TkGreater            : 37
TkGuard              : 62
TkId                 : 6 7 20 27 44 51 57 59
TkIf                 : 60
TkIn                 : 59
TkInt                : 8
TkLeq                : 35
TkLess               : 34
TkMinus              : 31 42
TkMult               : 29
TkNEqual             : 39
TkNot                : 41
TkNum                : 11 11 43 53
TkOBlock             : 1
TkOBracket           : 11 57
TkOd                 : 58
TkOpenPar            : 27 28 40
TkOr                 : 32
TkPlus               : 30
TkPrint              : 48
TkRof                : 59
TkSemicolon          : 5 13
TkSkip               : 19
TkSoForth            : 11
TkString             : 52
TkTo                 : 59
TkTrue               : 45 54
TkTwoPoints          : 6 27 28
error                : 

Nonterminals, with rules where they appear

ARRAY_DECLARATION    : 10
ASIG                 : 14
ASIG_ARRAY           : 22
BLOCK                : 0
CONDITIONAL          : 18
CREATE_ARRAY         : 23 26
DECLARE              : 1
DO_LOOP              : 16
E                    : 21 25 25 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 42 57 58 59 59 61 62
EXPRESSION           : 20
EXPRESSION_TO_PRINT  : 49 50
FOR_LOOP             : 17
GUARD                : 60 62
INSTRUCTION          : 12 13
LIST_DECLARE         : 2 5
LIST_INSTRUCTIONS    : 1 13 58 59 61 62
PRINT                : 15
READ_ARRAY           : 47 56
TOPRINT              : 48 50
TYPE                 : 6
VARIABLE_DECLARATION : 4 5 7
WRITE_ARRAY          : 24 28

Parsing method: LALR

state 0

    (0) S' -> . BLOCK
    (1) BLOCK -> . TkOBlock DECLARE LIST_INSTRUCTIONS TkCBlock

    TkOBlock        shift and go to state 2

    BLOCK                          shift and go to state 1

state 1

    (0) S' -> BLOCK .



state 2

    (1) BLOCK -> TkOBlock . DECLARE LIST_INSTRUCTIONS TkCBlock
    (2) DECLARE -> . TkDeclare LIST_DECLARE
    (3) DECLARE -> .

    TkDeclare       shift and go to state 4
    TkSkip          reduce using rule 3 (DECLARE -> .)
    TkId            reduce using rule 3 (DECLARE -> .)
    TkPrint         reduce using rule 3 (DECLARE -> .)
    TkDo            reduce using rule 3 (DECLARE -> .)
    TkFor           reduce using rule 3 (DECLARE -> .)
    TkIf            reduce using rule 3 (DECLARE -> .)

    DECLARE                        shift and go to state 3

state 3

    (1) BLOCK -> TkOBlock DECLARE . LIST_INSTRUCTIONS TkCBlock
    (12) LIST_INSTRUCTIONS -> . INSTRUCTION
    (13) LIST_INSTRUCTIONS -> . LIST_INSTRUCTIONS TkSemicolon INSTRUCTION
    (14) INSTRUCTION -> . ASIG
    (15) INSTRUCTION -> . PRINT
    (16) INSTRUCTION -> . DO_LOOP
    (17) INSTRUCTION -> . FOR_LOOP
    (18) INSTRUCTION -> . CONDITIONAL
    (19) INSTRUCTION -> . TkSkip
    (20) ASIG -> . TkId TkAsig EXPRESSION
    (48) PRINT -> . TkPrint TOPRINT
    (58) DO_LOOP -> . TkDo E TkArrow LIST_INSTRUCTIONS TkOd
    (59) FOR_LOOP -> . TkFor TkId TkIn E TkTo E TkArrow LIST_INSTRUCTIONS TkRof
    (60) CONDITIONAL -> . TkIf GUARD TkFi

    TkSkip          shift and go to state 12
    TkId            shift and go to state 13
    TkPrint         shift and go to state 14
    TkDo            shift and go to state 15
    TkFor           shift and go to state 16
    TkIf            shift and go to state 17

    LIST_INSTRUCTIONS              shift and go to state 5
    INSTRUCTION                    shift and go to state 6
    ASIG                           shift and go to state 7
    PRINT                          shift and go to state 8
    DO_LOOP                        shift and go to state 9
    FOR_LOOP                       shift and go to state 10
    CONDITIONAL                    shift and go to state 11

state 4

    (2) DECLARE -> TkDeclare . LIST_DECLARE
    (4) LIST_DECLARE -> . VARIABLE_DECLARATION
    (5) LIST_DECLARE -> . LIST_DECLARE TkSemicolon VARIABLE_DECLARATION
    (6) VARIABLE_DECLARATION -> . TkId TkTwoPoints TYPE
    (7) VARIABLE_DECLARATION -> . TkId TkComma VARIABLE_DECLARATION

    TkId            shift and go to state 20

    LIST_DECLARE                   shift and go to state 18
    VARIABLE_DECLARATION           shift and go to state 19

state 5

    (1) BLOCK -> TkOBlock DECLARE LIST_INSTRUCTIONS . TkCBlock
    (13) LIST_INSTRUCTIONS -> LIST_INSTRUCTIONS . TkSemicolon INSTRUCTION

    TkCBlock        shift and go to state 21
    TkSemicolon     shift and go to state 22


state 6

    (12) LIST_INSTRUCTIONS -> INSTRUCTION .

    TkCBlock        reduce using rule 12 (LIST_INSTRUCTIONS -> INSTRUCTION .)
    TkSemicolon     reduce using rule 12 (LIST_INSTRUCTIONS -> INSTRUCTION .)
    TkOd            reduce using rule 12 (LIST_INSTRUCTIONS -> INSTRUCTION .)
    TkFi            reduce using rule 12 (LIST_INSTRUCTIONS -> INSTRUCTION .)
    TkGuard         reduce using rule 12 (LIST_INSTRUCTIONS -> INSTRUCTION .)
    TkRof           reduce using rule 12 (LIST_INSTRUCTIONS -> INSTRUCTION .)


state 7

    (14) INSTRUCTION -> ASIG .

    TkCBlock        reduce using rule 14 (INSTRUCTION -> ASIG .)
    TkSemicolon     reduce using rule 14 (INSTRUCTION -> ASIG .)
    TkOd            reduce using rule 14 (INSTRUCTION -> ASIG .)
    TkFi            reduce using rule 14 (INSTRUCTION -> ASIG .)
    TkGuard         reduce using rule 14 (INSTRUCTION -> ASIG .)
    TkRof           reduce using rule 14 (INSTRUCTION -> ASIG .)


state 8

    (15) INSTRUCTION -> PRINT .

    TkCBlock        reduce using rule 15 (INSTRUCTION -> PRINT .)
    TkSemicolon     reduce using rule 15 (INSTRUCTION -> PRINT .)
    TkOd            reduce using rule 15 (INSTRUCTION -> PRINT .)
    TkFi            reduce using rule 15 (INSTRUCTION -> PRINT .)
    TkGuard         reduce using rule 15 (INSTRUCTION -> PRINT .)
    TkRof           reduce using rule 15 (INSTRUCTION -> PRINT .)


state 9

    (16) INSTRUCTION -> DO_LOOP .

    TkCBlock        reduce using rule 16 (INSTRUCTION -> DO_LOOP .)
    TkSemicolon     reduce using rule 16 (INSTRUCTION -> DO_LOOP .)
    TkOd            reduce using rule 16 (INSTRUCTION -> DO_LOOP .)
    TkFi            reduce using rule 16 (INSTRUCTION -> DO_LOOP .)
    TkGuard         reduce using rule 16 (INSTRUCTION -> DO_LOOP .)
    TkRof           reduce using rule 16 (INSTRUCTION -> DO_LOOP .)


state 10

    (17) INSTRUCTION -> FOR_LOOP .

    TkCBlock        reduce using rule 17 (INSTRUCTION -> FOR_LOOP .)
    TkSemicolon     reduce using rule 17 (INSTRUCTION -> FOR_LOOP .)
    TkOd            reduce using rule 17 (INSTRUCTION -> FOR_LOOP .)
    TkFi            reduce using rule 17 (INSTRUCTION -> FOR_LOOP .)
    TkGuard         reduce using rule 17 (INSTRUCTION -> FOR_LOOP .)
    TkRof           reduce using rule 17 (INSTRUCTION -> FOR_LOOP .)


state 11

    (18) INSTRUCTION -> CONDITIONAL .

    TkCBlock        reduce using rule 18 (INSTRUCTION -> CONDITIONAL .)
    TkSemicolon     reduce using rule 18 (INSTRUCTION -> CONDITIONAL .)
    TkOd            reduce using rule 18 (INSTRUCTION -> CONDITIONAL .)
    TkFi            reduce using rule 18 (INSTRUCTION -> CONDITIONAL .)
    TkGuard         reduce using rule 18 (INSTRUCTION -> CONDITIONAL .)
    TkRof           reduce using rule 18 (INSTRUCTION -> CONDITIONAL .)


state 12

    (19) INSTRUCTION -> TkSkip .

    TkCBlock        reduce using rule 19 (INSTRUCTION -> TkSkip .)
    TkSemicolon     reduce using rule 19 (INSTRUCTION -> TkSkip .)
    TkOd            reduce using rule 19 (INSTRUCTION -> TkSkip .)
    TkFi            reduce using rule 19 (INSTRUCTION -> TkSkip .)
    TkGuard         reduce using rule 19 (INSTRUCTION -> TkSkip .)
    TkRof           reduce using rule 19 (INSTRUCTION -> TkSkip .)


state 13

    (20) ASIG -> TkId . TkAsig EXPRESSION

    TkAsig          shift and go to state 23


state 14

    (48) PRINT -> TkPrint . TOPRINT
    (49) TOPRINT -> . EXPRESSION_TO_PRINT
    (50) TOPRINT -> . TOPRINT TkConcat EXPRESSION_TO_PRINT
    (51) EXPRESSION_TO_PRINT -> . TkId
    (52) EXPRESSION_TO_PRINT -> . TkString
    (53) EXPRESSION_TO_PRINT -> . TkNum
    (54) EXPRESSION_TO_PRINT -> . TkTrue
    (55) EXPRESSION_TO_PRINT -> . TkFalse
    (56) EXPRESSION_TO_PRINT -> . READ_ARRAY
    (57) READ_ARRAY -> . TkId TkOBracket E TkCBracket

    TkId            shift and go to state 26
    TkString        shift and go to state 27
    TkNum           shift and go to state 28
    TkTrue          shift and go to state 29
    TkFalse         shift and go to state 30

    TOPRINT                        shift and go to state 24
    EXPRESSION_TO_PRINT            shift and go to state 25
    READ_ARRAY                     shift and go to state 31

state 15

    (58) DO_LOOP -> TkDo . E TkArrow LIST_INSTRUCTIONS TkOd
    (29) E -> . E TkMult E
    (30) E -> . E TkPlus E
    (31) E -> . E TkMinus E
    (32) E -> . E TkOr E
    (33) E -> . E TkAnd E
    (34) E -> . E TkLess E
    (35) E -> . E TkLeq E
    (36) E -> . E TkGeq E
    (37) E -> . E TkGreater E
    (38) E -> . E TkEqual E
    (39) E -> . E TkNEqual E
    (40) E -> . TkOpenPar E TkClosePar
    (41) E -> . TkNot E
    (42) E -> . TkMinus E
    (43) E -> . TkNum
    (44) E -> . TkId
    (45) E -> . TkTrue
    (46) E -> . TkFalse
    (47) E -> . READ_ARRAY
    (57) READ_ARRAY -> . TkId TkOBracket E TkCBracket

    TkOpenPar       shift and go to state 34
    TkNot           shift and go to state 35
    TkMinus         shift and go to state 33
    TkNum           shift and go to state 36
    TkId            shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    E                              shift and go to state 32
    READ_ARRAY                     shift and go to state 40

state 16

    (59) FOR_LOOP -> TkFor . TkId TkIn E TkTo E TkArrow LIST_INSTRUCTIONS TkRof

    TkId            shift and go to state 41


state 17

    (60) CONDITIONAL -> TkIf . GUARD TkFi
    (61) GUARD -> . E TkArrow LIST_INSTRUCTIONS
    (62) GUARD -> . GUARD TkGuard E TkArrow LIST_INSTRUCTIONS
    (29) E -> . E TkMult E
    (30) E -> . E TkPlus E
    (31) E -> . E TkMinus E
    (32) E -> . E TkOr E
    (33) E -> . E TkAnd E
    (34) E -> . E TkLess E
    (35) E -> . E TkLeq E
    (36) E -> . E TkGeq E
    (37) E -> . E TkGreater E
    (38) E -> . E TkEqual E
    (39) E -> . E TkNEqual E
    (40) E -> . TkOpenPar E TkClosePar
    (41) E -> . TkNot E
    (42) E -> . TkMinus E
    (43) E -> . TkNum
    (44) E -> . TkId
    (45) E -> . TkTrue
    (46) E -> . TkFalse
    (47) E -> . READ_ARRAY
    (57) READ_ARRAY -> . TkId TkOBracket E TkCBracket

    TkOpenPar       shift and go to state 34
    TkNot           shift and go to state 35
    TkMinus         shift and go to state 33
    TkNum           shift and go to state 36
    TkId            shift and go to state 37
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    GUARD                          shift and go to state 42
    E                              shift and go to state 43
    READ_ARRAY                     shift and go to state 40

state 18

    (2) DECLARE -> TkDeclare LIST_DECLARE .
    (5) LIST_DECLARE -> LIST_DECLARE . TkSemicolon VARIABLE_DECLARATION

    TkSkip          reduce using rule 2 (DECLARE -> TkDeclare LIST_DECLARE .)
    TkId            reduce using rule 2 (DECLARE -> TkDeclare LIST_DECLARE .)
    TkPrint         reduce using rule 2 (DECLARE -> TkDeclare LIST_DECLARE .)
    TkDo            reduce using rule 2 (DECLARE -> TkDeclare LIST_DECLARE .)
    TkFor           reduce using rule 2 (DECLARE -> TkDeclare LIST_DECLARE .)
    TkIf            reduce using rule 2 (DECLARE -> TkDeclare LIST_DECLARE .)
    TkSemicolon     shift and go to state 44


state 19

    (4) LIST_DECLARE -> VARIABLE_DECLARATION .

    TkSemicolon     reduce using rule 4 (LIST_DECLARE -> VARIABLE_DECLARATION .)
    TkSkip          reduce using rule 4 (LIST_DECLARE -> VARIABLE_DECLARATION .)
    TkId            reduce using rule 4 (LIST_DECLARE -> VARIABLE_DECLARATION .)
    TkPrint         reduce using rule 4 (LIST_DECLARE -> VARIABLE_DECLARATION .)
    TkDo            reduce using rule 4 (LIST_DECLARE -> VARIABLE_DECLARATION .)
    TkFor           reduce using rule 4 (LIST_DECLARE -> VARIABLE_DECLARATION .)
    TkIf            reduce using rule 4 (LIST_DECLARE -> VARIABLE_DECLARATION .)


state 20

    (6) VARIABLE_DECLARATION -> TkId . TkTwoPoints TYPE
    (7) VARIABLE_DECLARATION -> TkId . TkComma VARIABLE_DECLARATION

    TkTwoPoints     shift and go to state 45
    TkComma         shift and go to state 46


state 21

    (1) BLOCK -> TkOBlock DECLARE LIST_INSTRUCTIONS TkCBlock .

    $end            reduce using rule 1 (BLOCK -> TkOBlock DECLARE LIST_INSTRUCTIONS TkCBlock .)


state 22

    (13) LIST_INSTRUCTIONS -> LIST_INSTRUCTIONS TkSemicolon . INSTRUCTION
    (14) INSTRUCTION -> . ASIG
    (15) INSTRUCTION -> . PRINT
    (16) INSTRUCTION -> . DO_LOOP
    (17) INSTRUCTION -> . FOR_LOOP
    (18) INSTRUCTION -> . CONDITIONAL
    (19) INSTRUCTION -> . TkSkip
    (20) ASIG -> . TkId TkAsig EXPRESSION
    (48) PRINT -> . TkPrint TOPRINT
    (58) DO_LOOP -> . TkDo E TkArrow LIST_INSTRUCTIONS TkOd
    (59) FOR_LOOP -> . TkFor TkId TkIn E TkTo E TkArrow LIST_INSTRUCTIONS TkRof
    (60) CONDITIONAL -> . TkIf GUARD TkFi

    TkSkip          shift and go to state 12
    TkId            shift and go to state 13
    TkPrint         shift and go to state 14
    TkDo            shift and go to state 15
    TkFor           shift and go to state 16
    TkIf            shift and go to state 17

    INSTRUCTION                    shift and go to state 47
    ASIG                           shift and go to state 7
    PRINT                          shift and go to state 8
    DO_LOOP                        shift and go to state 9
    FOR_LOOP                       shift and go to state 10
    CONDITIONAL                    shift and go to state 11

state 23

    (20) ASIG -> TkId TkAsig . EXPRESSION
    (21) EXPRESSION -> . E
    (22) EXPRESSION -> . ASIG_ARRAY
    (29) E -> . E TkMult E
    (30) E -> . E TkPlus E
    (31) E -> . E TkMinus E
    (32) E -> . E TkOr E
    (33) E -> . E TkAnd E
    (34) E -> . E TkLess E
    (35) E -> . E TkLeq E
    (36) E -> . E TkGeq E
    (37) E -> . E TkGreater E
    (38) E -> . E TkEqual E
    (39) E -> . E TkNEqual E
    (40) E -> . TkOpenPar E TkClosePar
    (41) E -> . TkNot E
    (42) E -> . TkMinus E
    (43) E -> . TkNum
    (44) E -> . TkId
    (45) E -> . TkTrue
    (46) E -> . TkFalse
    (47) E -> . READ_ARRAY
    (23) ASIG_ARRAY -> . CREATE_ARRAY
    (24) ASIG_ARRAY -> . WRITE_ARRAY
    (57) READ_ARRAY -> . TkId TkOBracket E TkCBracket
    (25) CREATE_ARRAY -> . E TkComma E
    (26) CREATE_ARRAY -> . CREATE_ARRAY TkComma E
    (27) WRITE_ARRAY -> . TkId TkOpenPar E TkTwoPoints E TkClosePar
    (28) WRITE_ARRAY -> . WRITE_ARRAY TkOpenPar E TkTwoPoints E TkClosePar

    TkOpenPar       shift and go to state 34
    TkNot           shift and go to state 35
    TkMinus         shift and go to state 33
    TkNum           shift and go to state 36
    TkId            shift and go to state 48
    TkTrue          shift and go to state 38
    TkFalse         shift and go to state 39

    EXPRESSION                     shift and go to state 49
    E                              shift and go to state 50
    ASIG_ARRAY                     shift and go to state 51
    READ_ARRAY                     shift and go to state 40
    CREATE_ARRAY                   shift and go to state 52
    WRITE_ARRAY                    shift and go to state 53

state 24

    (48) PRINT -> TkPrint TOPRINT .
    (50) TOPRINT -> TOPRINT . TkConcat EXPRESSION_TO_PRINT
